# mcdk-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
knowledge/BedrockDev/: 01_Addons.md  03_Biomes.md  05_Client Biomes.md  07_Entity Events.md  09_Features.md  10_Fogs.md  12_Molang.md  14_Recipes.md  15_Schemas.md  17_Volumes.md  index.md
knowledge/ModAPI/事件/: 事件索引表.md  物品.md  物理.md  玩家.md
knowledge/ModAPI/接口/: Api索引表.md  原生UI.md  游戏设置.md  物品.md  物理.md
knowledge/ModAPI/接口/世界/: 时间.md  渲染.md  索引.md  行为.md
knowledge/ModAPI/接口/实体/: 属性.md  渲染.md  索引.md  背包.md
knowledge/ModAPI/接口/方块/: 容器.md
knowledge/ModAPI/接口/玩家/: 摄像机.md  索引.md  背包.md  行为.md
knowledge/ModAPI/接口/自定义UI/: 索引.md  通用设置.md
knowledge/ModAPI/接口/通用/: 工具.md
knowledge/ModAPI/枚举值/: AttrType.md  AttributeModifierOperation.md  AttributeOperands.md  EntityType.md  RenderLayer.md  索引.md
knowledge/NeteaseGuide/mcguide/16-美术/: 50-贴图规范及九宫格使用.md
knowledge/NeteaseGuide/mcguide/16-美术/7-材质与着色器/: 1-材质介绍与着色器入门.md  2-内置材质清单.md  3-材质配置说明.md  4-材质实战.md  5-材质相关接口介绍.md  6-图形管线与GLSL简单入门.md
knowledge/NeteaseGuide/mcguide/16-美术/9-特效/: 00-特效编辑器简介.md  10-模型导入.md  20-原版特效创建与导入.md  21-原版特效属性详细说明.md  30-中国版特效创建与使用.md  40-特效挂接到模型.md  45-时间轴功能.md  50-预览功能.md  70-中国版特效属性详细说明.md  80-中国版粒子配置文件解析.md  90-中国版序列帧配置文件解析.md
knowledge/NeteaseGuide/mcguide/18-界面与交互/: 10-控件和控件属性.md  11-图片缩放适配与九宫切图.md  13-继承和自定义控件.md  15-变量引用和万用控件.md  16-示例：开关与标签切换.md  18-添加原生控件.md  19-控件属性动画.md  20-界面适配预览和方法.md  21-操作安全性说明.md  30-UI说明文档.md  40-UIAPI文档.md  50-UI控件对象.md  61-原生界面修改文档.md  70-UI数据绑定.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/10-基本概念/: 1-我的世界基础概念.md  10-Vector3.md  11-Quaternion.md  12-Matrix.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/100-参考资料/: 0-索引.md  10-EntityList.md  11-ComponentList.md  12-PropertiesList.md  13-AIGoalList.md  14-TriggerList.md  15-EventList.md  16-FilterList.md  17-BlockComponentList.md  18-BlockTriggerList.md  19-BlockEventList.md  20-ItemComponentList.md  21-FeatureList.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/11-组装简单玩法/: 0-关卡编辑器.md  1-放置和管理生物.md  3-维度切换.md  4-预览窗工具栏.md  5-作品设置.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/15-自定义游戏内容/: 0-配置.md  10-微缩方块.md  11-自定义附魔文档.md  12-自定义物品分组.md  13-自定义物品分页.md  14-配置与JSON文件关系.md  15-配置已知问题说明.md  16-自定义成就系统.md  5-自定义配方.md  6-自定义远程武器.md  7-自定义状态效果.md  8-自定义音乐.md  9-自定义指令.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/15-自定义游戏内容/1-自定义物品/: 1-自定义基础物品.md  2-自定义武器及工具.md  3-自定义盔甲.md  4-自定义生物蛋.md  5-自定义蓄力物品.md  6-自定义物品贴图使用序列帧动画.md  7-自定义桶.md  8-自定义盾牌.md  9-自定义鱼竿.md
knowledge/NeteaseGuide/mcguide/20-玩法开发/15-自定义游戏内容/2-自定义方块/: 0-自定义方块概述.md  1-JSON组件.md  2-功能.md  (+6 more)
knowledge/NeteaseGuide/mcguide/20-玩法开发/20-物理玩法开发/: 1-物理的使用指南.md
knowledge/NeteaseGuide/mcguide/26-联机大厅/: 20-联机大厅调试与多人测试文档.md  5-联机大厅作品与商品上传文档.md  6-联机大厅商品2.0文档.md  7-竞技模式组件文档.md  8-联机大厅运营管理配置试运行文档.md
knowledge/NeteaseGuide/mcguide/9-规范开发/: 8-通用设置规范.md
knowledge/QuModDocs/Lesson/: EntityMoveLight.md
knowledge/QuModDocs/QuModLibs/: QuModMEX.md  baseClient.md  baseUI.md  baseUtil.md  globalApi.md  modMain.md
knowledge/QuModDocs/QuModLibs/HybridProject/: BlendLoader.md  NeteaseLoader.md  QuModLoader.md
knowledge/QuModDocs/QuModLibs/Includes/GLRender/: Client.md  Global.md
knowledge/QuModDocs/QuModLibs/Modules/EntityComps/: Doc.md  Global.md  Server.md
knowledge/QuModDocs/QuModLibs/Modules/EventsPool/: Global.md
knowledge/QuModDocs/QuModLibs/Modules/MultiplayerLobby/: QuickLobbyManager.md
knowledge/QuModDocs/QuModLibs/Modules/Promise/: Base.md  Doc.md  Promise.md
knowledge/QuModDocs/QuModLibs/Modules/Service/: Doc.md  Global.md
knowledge/QuModDocs/QuModLibs/Modules/Thread/: Global.md
knowledge/QuModDocs/QuModLibs/Modules/UI/: Anims.md  Client.md  Doc.md  EnhancedUI.md  QGridBinder.md
knowledge/QuModDocs/QuModLibs/Modules/UIManager/: Client.md
knowledge/QuModDocs/QuModLibs/Modules/Utils/: Doc.md  TimeLine.md  WeightUtil.md
knowledge/WikiDev/: 02_Animations.md  04_Blocks.md  06_Entities.md  08_Entity Timeline Events.md  11_Item.md  13_Particles.md  16_Texture Sets.md
libs/cpp-mcp/include/: mcp_logger.h  mcp_server.h  mcp_stdio_server.h
libs/cpp-mcp/src/: CMakeLists.txt  mcp_server.cpp  mcp_stdio_server.cpp
libs/tree-sitter-python/: CMakeLists.txt
plans/: bedrock-model-mcp-tool-design.md  development-plan.md  jsonui-mcp-tool-design.md  python2-project-analysis-mcp-plan.md
plans/res/: Geo-Schema-Documentation.txt  apple_3d.geo.json  geometry.json  pvz_zombie.animation.json  pvz_zombie.geo.json
plans/res/QuModLibs/: Client.py  Information.py  Math.py  Server.py  UI.py  Util.py
plans/res/QuModLibs/Include/GL_Render/: Client.py  Server.py
plans/res/QuModLibs/Modules/CallService/: Client.py
plans/res/QuModLibs/Modules/DataStore/: Client.py  Server.py
plans/res/QuModLibs/Modules/EntityComps/: Client.py  Server.py
plans/res/QuModLibs/Modules/EventsPool/: Client.py  Server.py
plans/res/QuModLibs/Modules/Items/: Client.py  Globals.py  Server.py
plans/res/QuModLibs/Modules/Services/: Globals.py
plans/res/QuModLibs/Modules/SharedAPI/: Client.py  Server.py
plans/res/QuModLibs/Modules/UI/: Anims.py  Client.py  Funcs.py  RAII.py
plans/res/QuModLibs/Modules/Utils/: Container.py
skills/mc-search/: SKILL.md
skills/mod-workflow/: SKILL.md
src/: main.cpp
src/app/: runtime_paths.cpp  runtime_paths.hpp  server_runtime.cpp  server_runtime.hpp
src/common/: path_utils.hpp
src/project_analysis/: project_analyzer.cpp  project_analyzer.hpp
src/search/: bm25.h  bm25.hpp  index_cache.h  index_cache.hpp  search_service.h  search_service.hpp
src/server/: tool_stats.hpp
src/tools/: animation_editor.hpp  register_animation.hpp  register_jsonui.hpp  register_netease.hpp  register_pixel_art.hpp  register_python_analysis.hpp  register_search.hpp  stb_impl.cpp  ui_diagnoser.cpp  ui_diagnoser.h  ui_templates.cpp  ui_templates.h
tests/: CMakeLists.txt  python_analysis_test.cpp  search_test.cpp
tools/: CMakeLists.txt
tools/mcdk-index-compiler/: CMakeLists.txt  index_compiler_main.cpp
tools/mcdk-search/: CMakeLists.txt  main.cpp  search_app.hpp  search_ui_common.hpp
(+29 files in other folders)
